--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ CLOUD_NAME=dfurdxjub
 CLOUD_API_KEY=547968368875677
 CLOUD_API_SECRET=XJQygPAdzY5r_efWDkko2ZACTDo
 ORS_API_KEY=5b3ce3597851110001cf6248489300e8c7c2477285009fadf25eb521
+MONGO_DB_ATLAS=mongodb+srv://jagdishraut2004:rFRKhR2prTdiKMR7@cluster1.d4hvt.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1
