--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
     "version": 2,
     "builds": [{ "src": "index.js", "use": "@vercel/node" }],
-    "routes": [{ "src": "/(.*)", "dest": "/index.js" }]
+    "routes": [
+      { "src": "/", "dest": "/tripsy" }, 
+      { "src": "/(.*)", "dest": "/index.js" }
+    ]
   }
   
