--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,9 @@
   "version": 2,
   "builds": [{ "src": "index.js", "use": "@vercel/node" }],
   "routes": [
-    { "src": "^/$", "dest": "/tripsy" }, 
+    { "src": "^/$", "dest": "/Tripsy" }, 
     { "src": "/(.*)", "dest": "/index.js" }
   ]
 }
+
   
